<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listContraint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rectangle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
        <ImageView
            android:id="@+id/firstTeam"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/firstTeam"
            android:background="@drawable/circle"
            android:scaleType="centerCrop"
            />
        <ImageView
            android:id="@+id/secondTeam"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/firstTeam"
            app:layout_constraintTop_toTopOf="@id/firstTeam"
            app:layout_constraintBottom_toBottomOf="@id/firstTeam"
            android:contentDescription="@string/firstTeam"
            android:background="@drawable/circle"
            android:scaleType="centerCrop"
            />
        <TextView
            android:id="@+id/firstTeamNameItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/firstTeam"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/secondTeam"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vs"
            />
        <TextView
            android:id="@+id/firstTeamPointItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/randomNumber"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/firstTeamNameItem"
            app:layout_constraintEnd_toStartOf="@+id/minus"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/vs"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/firstTeamNameItem"
            app:layout_constraintTop_toTopOf="@id/firstTeamNameItem"
            app:layout_constraintEnd_toStartOf="@+id/secondTeamNameItem"
            />
        <TextView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/firstTeamPointItem"
            app:layout_constraintTop_toTopOf="@+id/firstTeamPointItem"
            app:layout_constraintEnd_toStartOf="@+id/secondTeamPointItem"
            />
        <TextView
            android:id="@+id/secondTeamNameItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/firstTeam"
            android:maxLines="2"
            android:ellipsize="end"
            android:singleLine="false"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/vs"
            app:layout_constraintTop_toTopOf="@id/firstTeamNameItem"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/secondTeamPointItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/randomNumber"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/secondTeamNameItem"
            app:layout_constraintStart_toEndOf="@id/minus"
            />
</androidx.constraintlayout.widget.ConstraintLayout>